add reset password logic + docs
