# docs/swagger.json
@@ -3,6 +3,7 @@
   "paths": {
     "/api": {
       "get": {
+        "deprecated": true,
         "description": "This is the default root endpoint generated by NestJS. It returns a static test message and is not part of the real Silah API.",
         "operationId": "AppController_getHello",
         "parameters": [],
@@ -22,83 +23,6 @@
         "summary": "Not a usable endpoint",
         "tags": [
           "Default"
-        ]
-      }
-    },
-    "/api/users": {
-      "get": {
-        "operationId": "UserController_getUserData",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "User"
-        ]
-      },
-      "patch": {
-        "operationId": "UserController_updateUser",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "User"
-        ]
-      }
-    },
-    "/api/users/{id}": {
-      "get": {
-        "operationId": "UserController_getUserById",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "User"
-        ]
-      }
-    },
-    "/api/users/switch-role": {
-      "patch": {
-        "operationId": "UserController_switchUserRole",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "User"
-        ]
-      }
-    },
-    "/api/users/create-user": {
-      "post": {
-        "operationId": "UserController_createUser",
-        "parameters": [],
-        "responses": {
-          "201": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "User"
         ]
       }
     },
@@ -293,7 +217,7 @@
     },
     "/api/auth/verify-email": {
       "post": {
-        "description": "This endpoint should be called when the user clicks the verification button which is after clicking the link in their email.",
+        "description": "This endpoint should be called when the user clicks the verification button which is after clicking the link in their email.<br> So this endpoint should be called from the `/verify-email` route in the frontend, remember to pass the token as a query parameter (so the link will be `/verify-email?token=`).",
         "operationId": "AuthController_verifyEmail",
         "parameters": [
           {
@@ -364,7 +288,8 @@
               "schema": {
                 "example": {
                   "email": "example@email.com"
-                }
+                },
+                "$ref": "#/components/schemas/RequestToSendEmailDto"
               }
             }
           }
@@ -419,10 +344,135 @@
     },
     "/api/auth/request-password-reset": {
       "post": {
+        "description": "This endpoint sends a password reset link to the user's email address.<br><br>\n    It is used in two cases:<br>\n    - If the user clicks the \"Forgot Password?\" button.<br>\n    - If the user previously requested a reset link but the 5-minute token has expired.<br><br>\n    Note: The token will only be sent if the email exists and is verified. For security reasons, we always return the same success message, regardless of whether the user exists or is verified.",
         "operationId": "AuthController_requestPasswordReset",
         "parameters": [],
+        "requestBody": {
+          "required": true,
+          "description": "The email address of the user who wants to reset their password.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "example": {
+                  "email": "user@example.com"
+                },
+                "$ref": "#/components/schemas/RequestToSendEmailDto"
+              }
+            }
+          }
+        },
         "responses": {
           "201": {
+            "description": "Reset password email sent successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "message": "Password reset email sent successfully"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Failed to send reset password email",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "statusCode": 500,
+                    "message": "Failed to send reset password email"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "summary": "Request password reset link",
+        "tags": [
+          "Auth"
+        ]
+      }
+    },
+    "/api/auth/reset-password": {
+      "post": {
+        "description": "This endpoint is used after the user clicks the password reset link from their email.<br><br>\n    It should be triggered from the frontend's `/reset-password` route.<br>\n    The token should be passed as a query parameter in the URL.<br><br>\n    The body must include a new password that is between 8 and 28 characters long.",
+        "operationId": "AuthController_resetPassword",
+        "parameters": [
+          {
+            "name": "token",
+            "required": true,
+            "in": "query",
+            "description": "The JWT token sent in the reset password email. This must be passed as a query parameter.",
+            "schema": {
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "description": "The new password to set for the user account.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ResetPasswordDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Password reset successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "message": "Password reset successfully"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid or expired token, or validation error in request body.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "statusCode": 400,
+                    "message": "Invalid or expired reset password token"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found (after token is verified).",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": {
+                    "statusCode": 404,
+                    "message": "User not found"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "summary": "Reset user password using token",
+        "tags": [
+          "Auth"
+        ]
+      }
+    },
+    "/api/auth/switch-role": {
+      "patch": {
+        "operationId": "AuthController_switchUserRole",
+        "parameters": [],
+        "responses": {
+          "200": {
             "description": ""
           }
         },
@@ -431,17 +481,52 @@
         ]
       }
     },
-    "/api/auth/reset-password": {
-      "post": {
-        "operationId": "AuthController_resetPassword",
+    "/api/users": {
+      "get": {
+        "operationId": "UserController_getUserData",
         "parameters": [],
         "responses": {
-          "201": {
+          "200": {
             "description": ""
           }
         },
         "tags": [
-          "Auth"
+          "Users"
+        ]
+      },
+      "patch": {
+        "operationId": "UserController_updateUser",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Users"
+        ]
+      }
+    },
+    "/api/users/{id}": {
+      "get": {
+        "operationId": "UserController_getUserById",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Users"
         ]
       }
     }
@@ -477,7 +562,9 @@
           },
           "password": {
             "type": "string",
-            "example": "StrongPass123"
+            "example": "StrongPass123",
+            "minLength": 8,
+            "maxLength": 28
           },
           "name": {
             "type": "string",
@@ -558,6 +645,34 @@
         "required": [
           "password",
           "emailOrCrnCheck"
+        ]
+      },
+      "RequestToSendEmailDto": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "The user's email address",
+            "example": "user@example.com"
+          }
+        },
+        "required": [
+          "email"
+        ]
+      },
+      "ResetPasswordDto": {
+        "type": "object",
+        "properties": {
+          "newPassword": {
+            "type": "string",
+            "description": "The new password to replace the old one.",
+            "example": "StrongPass123",
+            "minLength": 8,
+            "maxLength": 28
+          }
+        },
+        "required": [
+          "newPassword"
         ]
       }
     }
