# src/auth/auth.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Post, Query, Res } from '@nestjs/common';
+import { Body, Controller, Patch, Post, Query, Res } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { Response } from 'express';
 import { SignupDto } from './dtos/signup.dto';
@@ -12,6 +12,8 @@ import {
   ApiNotFoundResponse,
 } from '@nestjs/swagger';
 import { LoginDto } from './dtos/login.dto';
+import { ResetPasswordDto } from './dtos/resetPassword.dto';
+import { RequestToSendEmailDto } from './dtos/requestToSendEmail.dto';
 
 /**
  * AuthController handles incoming authentication-related requests,
@@ -201,7 +203,7 @@ export class AuthController {
   @ApiOperation({
     summary: 'Verify user email using token',
     description:
-      'This endpoint should be called when the user clicks the verification button which is after clicking the link in their email.',
+      'This endpoint should be called when the user clicks the verification button which is after clicking the link in their email.<br> So this endpoint should be called from the `/verify-email` route in the frontend, remember to pass the token as a query parameter (so the link will be `/verify-email?token=`).',
   })
   @ApiQuery({
     name: 'token',
@@ -251,7 +253,7 @@ export class AuthController {
   })
   @ApiBody({
     description: 'Email to resend verification to',
-    type: String,
+    type: RequestToSendEmailDto,
     schema: { example: { email: 'example@email.com' } },
     required: true,
   })
@@ -282,13 +284,98 @@ export class AuthController {
       },
     },
   })
-  async resendVerificationEmail(@Body() email: string) {
-    return await this.authService.resendVerificationEmail(email);
+  async resendVerificationEmail(@Body() dto: RequestToSendEmailDto) {
+    return await this.authService.resendVerificationEmail(dto);
   }
 
   @Post('request-password-reset')
-  async requestPasswordReset() {}
+  @ApiOperation({
+    summary: 'Request password reset link',
+    description: `This endpoint sends a password reset link to the user's email address.<br><br>
+    It is used in two cases:<br>
+    - If the user clicks the "Forgot Password?" button.<br>
+    - If the user previously requested a reset link but the 5-minute token has expired.<br><br>
+    Note: The token will only be sent if the email exists and is verified. For security reasons, we always return the same success message, regardless of whether the user exists or is verified.`,
+  })
+  @ApiBody({
+    description:
+      'The email address of the user who wants to reset their password.',
+    type: RequestToSendEmailDto,
+    schema: { example: { email: 'user@example.com' } },
+    required: true,
+  })
+  @ApiResponse({
+    status: 201,
+    description: 'Reset password email sent successfully.',
+    schema: {
+      example: { message: 'Password reset email sent successfully' },
+    },
+  })
+  @ApiResponse({
+    status: 500,
+    description: 'Failed to send reset password email',
+    schema: {
+      example: {
+        statusCode: 500,
+        message: 'Failed to send reset password email',
+      },
+    },
+  })
+  async requestPasswordReset(@Body() dto: RequestToSendEmailDto) {
+    return await this.authService.requestPasswordReset(dto);
+  }
 
   @Post('reset-password')
-  async resetPassword() {}
+  @ApiOperation({
+    summary: 'Reset user password using token',
+    description: `This endpoint is used after the user clicks the password reset link from their email.<br><br>
+    It should be triggered from the frontend's \`/reset-password\` route.<br>
+    The token should be passed as a query parameter in the URL.<br><br>
+    The body must include a new password that is between 8 and 28 characters long.`,
+  })
+  @ApiQuery({
+    name: 'token',
+    required: true,
+    description:
+      'The JWT token sent in the reset password email. This must be passed as a query parameter.',
+    example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...',
+  })
+  @ApiBody({
+    type: ResetPasswordDto,
+    description: 'The new password to set for the user account.',
+  })
+  @ApiResponse({
+    status: 200,
+    description: 'Password reset successfully.',
+    schema: {
+      example: { message: 'Password reset successfully' },
+    },
+  })
+  @ApiResponse({
+    status: 400,
+    description:
+      'Invalid or expired token, or validation error in request body.',
+    schema: {
+      example: {
+        statusCode: 400,
+        message: 'Invalid or expired reset password token',
+      },
+    },
+  })
+  @ApiResponse({
+    status: 404,
+    description: 'User not found (after token is verified).',
+    schema: {
+      example: { statusCode: 404, message: 'User not found' },
+    },
+  })
+  async resetPassword(
+    @Query('token') token: string,
+    @Body() dto: ResetPasswordDto,
+  ) {
+    return await this.authService.resetPassword(token, dto);
+  }
+
+  @Patch('switch-role')
+  async switchUserRole() {}
 }
